# sc4-season-jumper

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml  release.yml
cmake/: CopyIfNotExists.cmake  SC4RenderServicesImGui.cmake
src/dll/: CMakeLists.txt  SC4SeasonJumperDirector.cpp  SC4SeasonJumperDirector.hpp  SC4TemplateDll.def  SC4TemplateDllDirector.cpp  SC4TemplateDllDirector.hpp  main.cpp
src/dll/panels/: HelloPanel.cpp  HelloPanel.hpp
src/dll/season/: CityContext.cpp  CityContext.hpp  FastForwardController.cpp  FastForwardController.hpp  Season.cpp  Season.hpp  SeasonJumpIds.hpp
src/dll/utils/: Logger.cpp  Logger.h  Settings.cpp  Settings.h  VersionDetection.cpp  VersionDetection.h
tools/: Rename-Project.ps1
